--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -16,28 +16,30 @@
 <body onload="showHide()">
     <br />
     <br />
-    <div class="row">
-        <div class="col-sm-2" align="center">
-            <img src="/Images/CodeTheWay Logo.png"  />
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-2" align="center">
+                <img src="/Images/CodeTheWay Logo.png" />
+            </div>
+            <div class="col-sm-10" align="center">
+                <p class="majorHeading" align="center">Code the Way</p>
+            </div>
         </div>
-        <div class="col-sm-10" align="center">
-            <p class="majorHeading" align="center" >Code the Way</p>
-        </div>
-    </div>
-    <br />
+        <br />
 
-    <div class="row">
-        <div class="col-sm-3" align="center">
-            <a href="codeTheWay.html" class="buttonFormatting">Code The Way</a>
-        </div>
-        <div class="col-sm-3" align="center">
-            <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
-        </div>
-        <div class="col-sm-3" align="center">
-            <a href="heroesForHealthcare.html" class="buttonFormatting">Heroes For Healthcare</a>
-        </div>
-        <div class="col-sm-3" align="center">
-            <a href="media.html" class="buttonFormatting">Media</a>
+        <div class="row">
+            <div class="col-sm-3" align="center">
+                <a href="codeTheWay.html" class="buttonFormatting">Code The Way</a>
+            </div>
+            <div class="col-sm-3" align="center">
+                <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
+            </div>
+            <div class="col-sm-3" align="center">
+                <a href="heroesForHealthcare.html" class="buttonFormatting">Heroes For Healthcare</a>
+            </div>
+            <div class="col-sm-3" align="center">
+                <a href="media.html" class="buttonFormatting">Media</a>
+            </div>
         </div>
     </div>
     <br />
