--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -14,94 +14,96 @@
 <body onload="showHide()">
     <br />
     <br />
-    <div class="row">
-        <div class="col-sm-2" align="center">
-            <img src="/Images/Heroes3.png" width="50%" />
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-2" align="center">
+                <img src="/Images/Heroes3.png" width="50%" />
+            </div>
+            <div class="col-sm-10" align="center">
+                <p class="majorHeading" align="center">Heroes For Healthcare</p>
+            </div>
         </div>
-        <div class="col-sm-10" align="center">
-            <p class="majorHeading" align="center">Heroes For Healthcare</p>
-        </div>
-    </div>
 
-    <br />
-    <div class="row">
-        <div class="col-sm-3" align="center">
-            <a href="codeTheWay.html" class="buttonFormatting">Code The Way</a>
-        </div>
-        <div class="col-sm-3" align="center">
-            <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
-        </div>
-        <div class="col-sm-3" align="center">
-            <a href="heroesForHealthcare.html" class="buttonFormatting">Heroes For Healthcare</a>
-        </div>
-        <div class="col-sm-3" align="center">
-            <a href="media.html" class="buttonFormatting">Media</a>
-        </div>
-    </div>
-    <br />
-    <div class="container">
+        <br />
         <div class="row">
-            <div class="col-sm-7">
-                <div class="row">
-                    <div class="col-sm-3">
-                        <p class="minorHeading">Mision</p>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="bodyText">
-                            <p>
-                                Our non-profit organization is a resource for our military personnel to start a career in healthcare.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <br />
-                <div class="row">
-                    <div class="col-sm-3">
-                        <p class="minorHeading">Unemployed Veterans</p>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="bodyText">
-                            <p>
-                                Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
-                            </p>
-                            <ul>
-                                <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
-                                <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <br />
+            <div class="col-sm-3" align="center">
+                <a href="codeTheWay.html" class="buttonFormatting">Code The Way</a>
             </div>
-            <div class="col-sm-5">
-                <div class="row">
-                    <img src="/Images/Heroes2.png" height="100%" width="100%" />
-                </div>
+            <div class="col-sm-3" align="center">
+                <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
+            </div>
+            <div class="col-sm-3" align="center">
+                <a href="heroesForHealthcare.html" class="buttonFormatting">Heroes For Healthcare</a>
+            </div>
+            <div class="col-sm-3" align="center">
+                <a href="media.html" class="buttonFormatting">Media</a>
             </div>
         </div>
-        <div class="row">
-            <button onclick="showHide()" class="buttonFormatting">Show Message</button>
-        </div>
-        <div id="message">
+</div>
+        <br />
+        <div class="container">
             <div class="row">
-                <div class="col-sm-3">
-                    <p class="minorHeading">Message From the President</p>
+                <div class="col-sm-7">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <p class="minorHeading">Mision</p>
+                        </div>
+                        <div class="col-sm-9">
+                            <div class="bodyText">
+                                <p>
+                                    Our non-profit organization is a resource for our military personnel to start a career in healthcare.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <p class="minorHeading">Unemployed Veterans</p>
+                        </div>
+                        <div class="col-sm-9">
+                            <div class="bodyText">
+                                <p>
+                                    Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
+                                </p>
+                                <ul>
+                                    <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
+                                    <li><a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <br />
                 </div>
-                <div class="col-sm-9">
-                    <div class="bodyText">
-                        <p>
-                            I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
-                            We need supporters like you to help our mission so our service members can get a job and better their lives.
-                            After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
-                        </p>
+                <div class="col-sm-5">
+                    <div class="row">
+                        <img src="/Images/Heroes2.png" height="100%" width="100%" />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <button onclick="showHide()" class="buttonFormatting">Show Message</button>
+            </div>
+            <div id="message">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <p class="minorHeading">Message From the President</p>
+                    </div>
+                    <div class="col-sm-9">
+                        <div class="bodyText">
+                            <p>
+                                I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
+                                We need supporters like you to help our mission so our service members can get a job and better their lives.
+                                After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
-    <br />
+        <br />
 </body>
 </html>
 <script>
