--- a/CTWUXClassExercise/Properties/lifeNavigators.html
+++ b/CTWUXClassExercise/Properties/lifeNavigators.html
@@ -15,94 +15,97 @@
 
     <br />
     <br />
-    <div class="row">
-        <div class="col-sm-2" align="center">
-            <img src="/Images/LifeNavigators1.jpg" width="50%" />
-        </div>
-        <div class="col-sm-10" align="center">
-            <p class="majorHeading" align="center">Life Navigators</p>
-        </div>
-    </div>
-    <br />
-    <div class="row">
-        <div class="col-sm-3" align="center">
-            <a href="codeTheWay.html" class="buttonFormatting">Code The Way</a>
-        </div>
-        <div class="col-sm-3" align="center">
-            <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
-        </div>
-        <div class="col-sm-3" align="center">
-            <a href="heroesForHealthcare.html" class="buttonFormatting">Heroes For Healthcare</a>
-        </div>
-        <div class="col-sm-3" align="center">
-            <a href="media.html" class="buttonFormatting">Media</a>
-        </div>
-    </div>
-    <br />
+    <div class="container-fluid">
 
-    <div class="container">
         <div class="row">
-            <div class="col-sm-6">
-                <div class="row">
-                    <div class="col-sm-3">
-                        <p class="minorHeading">Mission</p>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="bodyText">
-                            <p>
-                                The mission of Life Navigators is to improve the quality of life for individuals with developmental and related disabilities, their families, and the community through information, education, advocacy and life planning services.
-                            </p>
+            <div class="col-sm-2" align="center">
+                <img src="/Images/LifeNavigators1.jpg" width="50%" />
+            </div>
+            <div class="col-sm-10" align="center">
+                <p class="majorHeading" align="center">Life Navigators</p>
+            </div>
+        </div>
+        <br />
+        <div class="row">
+            <div class="col-sm-3" align="center">
+                <a href="codeTheWay.html" class="buttonFormatting">Code The Way</a>
+            </div>
+            <div class="col-sm-3" align="center">
+                <a href="lifeNavigators.html" class="buttonFormatting">Life Navigators</a>
+            </div>
+            <div class="col-sm-3" align="center">
+                <a href="heroesForHealthcare.html" class="buttonFormatting">Heroes For Healthcare</a>
+            </div>
+            <div class="col-sm-3" align="center">
+                <a href="media.html" class="buttonFormatting">Media</a>
+            </div>
+        </div>
+</div>
+        <br />
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <p class="minorHeading">Mission</p>
                         </div>
-                    </div>
-                </div>
-                <br />
-                <div class="row">
-                    <div class="col-sm-3">
-                        <p class="minorHeading">Vision</p>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="bodyText">
-                            <p>
-                                Life Navigators envisions an inclusive community where individuals with disabilities and their support networks experience full participation and maximized independence. Our community will value the rights, hopes, dreams and contributions of all people with disabilities.
-                            </p>
-                            <a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Life Navigators is always looking for volunteers!">Volunteering</a>
+                        <div class="col-sm-9">
+                            <div class="bodyText">
+                                <p>
+                                    The mission of Life Navigators is to improve the quality of life for individuals with developmental and related disabilities, their families, and the community through information, education, advocacy and life planning services.
+                                </p>
+                            </div>
                         </div>
                     </div>
                     <br />
+                    <div class="row">
+                        <div class="col-sm-3">
+                            <p class="minorHeading">Vision</p>
+                        </div>
+                        <div class="col-sm-9">
+                            <div class="bodyText">
+                                <p>
+                                    Life Navigators envisions an inclusive community where individuals with disabilities and their support networks experience full participation and maximized independence. Our community will value the rights, hopes, dreams and contributions of all people with disabilities.
+                                </p>
+                                <a class="bodyText" href="#" data-toggle="tooltip" data-placement="bottom" title="Life Navigators is always looking for volunteers!">Volunteering</a>
+                            </div>
+                        </div>
+                        <br />
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <img src="/Images/LifeNavigators2.jpg" />
                 </div>
             </div>
-            <div class="col-sm-6">
-                <img src="/Images/LifeNavigators2.jpg" />
-            </div>
-        </div>
-        <div class="row">
-            <button onclick="showHide()" class="buttonFormatting">Show History</button>
-        </div>
-        <div id="history">
             <div class="row">
-                <div class="col-sm-3">
-                    <p class="minorHeading">History</p>
-                </div>
-                <div class="col-sm-9">
-                    <div class="bodyText">
-                        <p>
-                            Life Navigators was founded by parents who were committed to developing programs and educational opportunities for their children with intellectual and developmental disabilities.
-                        </p>
-                        <ul>
-                            <li>1949: Concerned families founded the organization.</li>
-                            <li>1950’s: Initiated first day school for school–aged children with severe developmental disabilities.</li>
-                            <li>1960’s: Started Milwaukee’s first Information and Referral Program focused on Disability Services.</li>
-                            <li>1970’s: Initiated Wisconsin’s first Citizen Advocacy Program matching individuals with disabilities with community volunteers for peer and social support. Became the first Corporate Guardianship provider in Milwaukee County to be licensed by the State of Wisconsin.</li>
-                            <li>1980’s: Hosted the first Challenger Golf Outing to raise funds from individuals and corporations to support programs. Designated as regional site of the National On–The–Job Training Project to develop community–based employment opportunities for persons with disabilities.</li>
-                            <li>1990’s: Initiated Milwaukee’s first Trust Program, which allowed families to plan for the financial future of their loved one with a disability.</li>
-                            <li>2000’s: Purchased and renovated a new home for our offices located at 7203 West Center Street, Wauwatosa, Wisconsin.</li>
-                            <li>2010’s: Expanded the Trust Program by offering a second trust option, the Trust II Pooled Trust.</li>
-                        </ul>
+                <button onclick="showHide()" class="buttonFormatting">Show History</button>
+            </div>
+            <div id="history">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <p class="minorHeading">History</p>
+                    </div>
+                    <div class="col-sm-9">
+                        <div class="bodyText">
+                            <p>
+                                Life Navigators was founded by parents who were committed to developing programs and educational opportunities for their children with intellectual and developmental disabilities.
+                            </p>
+                            <ul>
+                                <li>1949: Concerned families founded the organization.</li>
+                                <li>1950’s: Initiated first day school for school–aged children with severe developmental disabilities.</li>
+                                <li>1960’s: Started Milwaukee’s first Information and Referral Program focused on Disability Services.</li>
+                                <li>1970’s: Initiated Wisconsin’s first Citizen Advocacy Program matching individuals with disabilities with community volunteers for peer and social support. Became the first Corporate Guardianship provider in Milwaukee County to be licensed by the State of Wisconsin.</li>
+                                <li>1980’s: Hosted the first Challenger Golf Outing to raise funds from individuals and corporations to support programs. Designated as regional site of the National On–The–Job Training Project to develop community–based employment opportunities for persons with disabilities.</li>
+                                <li>1990’s: Initiated Milwaukee’s first Trust Program, which allowed families to plan for the financial future of their loved one with a disability.</li>
+                                <li>2000’s: Purchased and renovated a new home for our offices located at 7203 West Center Street, Wauwatosa, Wisconsin.</li>
+                                <li>2010’s: Expanded the Trust Program by offering a second trust option, the Trust II Pooled Trust.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 </body>
